flickering fix

--- a/src/main/webapp/resources/less/checkbox.less
+++ b/src/main/webapp/resources/less/checkbox.less
@@ -12,7 +12,7 @@ input[type=checkbox].css-checkbox + label.css-label {
   padding-left: 55px;
   margin-left: 46px;
   @media @tablet{
-    margin-left: 48px;
+    margin-left: 50px;
   }
   margin-top: 10px;
   height: 44px;
